# fast_suisho

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: test-writer.md
.claude/hooks/: block-add-all.sh  block-dangerous-git.sh  block-no-verify.sh  command-allowlist.sh  log-permission-denied.sh  log-tool-call.sh  prevent-secret-commit.sh  python-lint.sh
.claude/hooks/lib/: shell-parse.sh
.githooks/: pre-commit
.github/workflows/: claude-code-review.yml  hook-tests.yml  lint.yml  test.yml
docs/: PLAN.md  nnue-architecture.md
docs/notes/: experiment-skill-conflicts.md
docs/survey/: 001-accelerating-neural-networks.md
experiments/000-baseline/: bench_nps.sh  report.md
experiments/001-nn-analysis/: ft_channel_l1.npy  report.md  stats.md
experiments/002-profile/: .gitignore  gprofng_functions.txt  perf_flat.txt  perf_flat_16t.txt  perf_graph.txt  perf_graph_16t.txt  perf_stat.txt  perf_stat_16t.txt  profile.sh  profile_env.txt  profile_env_16t.txt  report.md
experiments/003-channel-permutation/: apply_permutation.py  bench_orig.txt  bench_paired.sh  bench_paired.txt  bench_perm.txt  check_masks.py  ft_stats.patch  optimize_log.txt  optimize_permutation.py  perm.npy  report.md  sfens_stats_500.txt  sfens_verify_500.txt  usi_drive.py
match/: calibrate_nodes.sh  fetch_books.sh
match/books/: README.md  start_sfens_ply24.txt
scripts/: install-hooks.sh  tag.sh
tests/bot/: test_smoke.py
tests/tools/: test_leb128.py  test_roundtrip.py
tools/: analyze_nn.py
tools/nnue/: __init__.py  io.py  leb128.py  model.py
(+13 files in other folders)
